--- a/src/renderer/static/globals.css
+++ b/src/renderer/static/globals.css
@@ -263,8 +263,7 @@
   background: rgba(255, 255, 255, 0.2);
 }
 
-[data-mantine-color-scheme="dark"]
-  .katex-display:hover::-webkit-scrollbar-thumb {
+[data-mantine-color-scheme="dark"] .katex-display:hover::-webkit-scrollbar-thumb {
   background: rgba(255, 255, 255, 0.3);
 }
 
